Fixing spacing bug for footer

--- a/bmt-info-website/src/CSS/App.css
+++ b/bmt-info-website/src/CSS/App.css
@@ -24,7 +24,7 @@ p, ul, nav, input {
 }
 
 .body-content {
-  min-height: calc(100vh - 118px);
+  min-height: calc(100vh - 130px);
 }
 
 h1, h3, h4, h5 {
